expo update / added expo builds

--- a/MobileApp/app.json
+++ b/MobileApp/app.json
@@ -21,10 +21,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.bishwasexpo.MobileApp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "96306893-0c80-4df3-9727-81b7f41d9637"
+      }
     }
   }
 }
