--- a/MobileApp/package.json
+++ b/MobileApp/package.json
@@ -14,11 +14,17 @@
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.2",
     "expo": "~49.0.15",
+    "expo-file-system": "~15.4.5",
+    "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "gotham-fonts": "^1.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-image-picker": "^7.1.0",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.11.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
