--- a/MobileApp/package.json
+++ b/MobileApp/package.json
@@ -22,12 +22,13 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "^2.14.0",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-image-picker": "^7.1.0",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.11.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-sweet-alert": "^3.5.0",
     "react-native-vector-icons": "^10.0.2",
     "react-native-web": "~0.19.6"
   },
