--- a/MobileApp/package.json
+++ b/MobileApp/package.json
@@ -27,6 +27,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-image-picker": "^7.1.0",
+    "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.11.3",
     "react-native-safe-area-context": "4.6.3",
