--- a/MobileApp/package.json
+++ b/MobileApp/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.2",
+    "base-64": "^1.0.0",
     "expo": "~49.0.15",
     "expo-file-system": "~15.4.5",
     "expo-image-picker": "~14.3.2",
