--- a/MobileApp/package.json
+++ b/MobileApp/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
-    "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
@@ -35,8 +34,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-sweet-alert": "^3.5.0",
     "react-native-vector-icons": "^10.0.2",
-    "react-native-web": "~0.19.6",
-    "react-native-webview": "^13.6.3"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
