outdated packages fixes / implemented maps still incomplete / locate repair centers

--- a/MobileApp/app.json
+++ b/MobileApp/app.json
@@ -22,7 +22,8 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.bishwasexpo.MobileApp"
+      "package": "com.bishwasexpo.MobileApp",
+      "permissions": ["INTERNET"]
     },
     "web": {
       "favicon": "./assets/favicon.png"
