--- a/MobileApp/package.json
+++ b/MobileApp/package.json
@@ -17,28 +17,32 @@
     "base-64": "^1.0.0",
     "expo": "~49.0.15",
     "expo-cli": "^6.3.10",
-    "expo-file-system": "~15.4.5",
-    "expo-image-picker": "~14.3.2",
-    "expo-status-bar": "~1.6.0",
+    "expo-file-system": "^15.6.0",
+    "expo-image-picker": "^14.5.0",
+    "expo-status-bar": "^1.7.1",
+    "expo-updates": "~0.18.18",
     "gotham-fonts": "^1.0.3",
+    "metro": "^0.80.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "^0.73.1",
     "react-native-dotenv": "^3.4.9",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "^2.14.0",
     "react-native-image-picker": "^7.1.0",
+    "react-native-maps": "1.7.1",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
-    "react-native-paper": "^5.11.3",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-paper": "^5.11.4",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "^3.29.0",
     "react-native-sweet-alert": "^3.5.0",
-    "react-native-vector-icons": "^10.0.2",
-    "react-native-web": "~0.19.6"
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-web": "~0.19.6",
+    "react-native-webview": "13.2.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.23.6"
   },
   "private": true
 }
