--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "moment-timezone": "^0.5.43",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.0",
     "mysql2-promise": "^0.1.4",
