--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@react-native-picker/picker": "2.4.10",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.41.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "moment-timezone": "^0.5.43",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.0",
     "mysql2-promise": "^0.1.4",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "uuid": "^9.0.1"
   }
 }
