--- a/MobileApp/package.json
+++ b/MobileApp/package.json
@@ -15,6 +15,7 @@
     "@expo/webpack-config": "^19.0.0",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-picker/picker": "2.4.10",
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.2",
