--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cloudinary": "^1.41.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.5.43",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
