--- a/InventoryManagement/composer.json
+++ b/InventoryManagement/composer.json
@@ -24,7 +24,9 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "App\\Helpers\\": "app/Helpers/",
+            "App\\Models\\": "app/Models/"
         }
     },
     "autoload-dev": {
