--- a/MobileApp/package.json
+++ b/MobileApp/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.0",
     "@expo/config-plugins": "~7.2.2",
     "@expo/metro-config": "~0.10.0",
     "@expo/prebuild-config": "~6.2.4",
