--- a/MobileApp/package.json
+++ b/MobileApp/package.json
@@ -21,9 +21,10 @@
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.2",
     "base-64": "^1.0.0",
-    "expo": "~49.0.15",
+    "expo": "^49.0.0",
     "expo-file-system": "~15.4.5",
     "expo-image-picker": "~14.3.2",
+    "expo-location": "^16.5.3",
     "expo-modules-autolinking": "~1.5.0",
     "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
@@ -44,11 +45,12 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-snap-carousel": "4.0.0-beta.6",
-    "react-native-svg": "^14.1.0",
+    "react-native-svg": "13.9.0",
     "react-native-sweet-alert": "^3.5.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.2.2",
+    "toastify-js": "^1.12.0",
     "victory-native": "^36.8.2"
   },
   "devDependencies": {
