--- a/MobileApp/package.json
+++ b/MobileApp/package.json
@@ -24,7 +24,7 @@
     "expo": "^49.0.0",
     "expo-file-system": "~15.4.5",
     "expo-image-picker": "~14.3.2",
-    "expo-location": "^16.5.3",
+    "expo-location": "~16.1.0",
     "expo-modules-autolinking": "~1.5.0",
     "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
@@ -33,7 +33,7 @@
     "metro": "^0.80.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.72.10",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.9",
     "react-native-fs": "^2.20.0",
