--- a/MobileApp/package.json
+++ b/MobileApp/package.json
@@ -14,6 +14,8 @@
     "@expo/metro-config": "~0.10.0",
     "@expo/prebuild-config": "~6.2.4",
     "@expo/webpack-config": "^19.0.0",
+    "@gluestack-style/react": "^1.0.48",
+    "@gluestack-ui/themed": "^1.1.8",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.11",
@@ -34,6 +36,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.10",
+    "react-native-calendars": "^1.1303.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.9",
     "react-native-fs": "^2.20.0",
@@ -45,7 +48,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-snap-carousel": "4.0.0-beta.6",
-    "react-native-svg": "13.9.0",
+    "react-native-svg": "^14.1.0",
     "react-native-sweet-alert": "^3.5.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
