--- a/MobileApp/package.json
+++ b/MobileApp/package.json
@@ -16,7 +16,8 @@
     "@expo/webpack-config": "^19.0.0",
     "@gluestack-style/react": "^1.0.48",
     "@gluestack-ui/themed": "^1.1.8",
-    "@react-native-community/datetimepicker": "^7.6.2",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
@@ -50,7 +51,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-snap-carousel": "4.0.0-beta.6",
-    "react-native-svg": "^14.1.0",
+    "react-native-svg": "13.9.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.2.2",
