--- a/MobileApp/package.json
+++ b/MobileApp/package.json
@@ -10,56 +10,56 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.0",
-    "@expo/config-plugins": "~7.2.2",
-    "@expo/metro-config": "~0.10.0",
-    "@expo/prebuild-config": "~6.2.4",
-    "@expo/webpack-config": "^19.0.0",
+    "@expo/config-plugins": "~7.8.0",
+    "@expo/metro-config": "~0.17.1",
+    "@expo/prebuild-config": "~6.7.0",
+    "@expo/webpack-config": "~19.0.1",
     "@gluestack-style/react": "^1.0.48",
     "@gluestack-ui/themed": "^1.1.8",
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/datetimepicker": "7.2.0",
-    "@react-native-picker/picker": "2.4.10",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-picker/picker": "2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.2",
     "base-64": "^1.0.0",
-    "expo": "^49.0.0",
-    "expo-file-system": "~15.4.5",
-    "expo-image-picker": "~14.3.2",
-    "expo-location": "~16.1.0",
-    "expo-modules-autolinking": "~1.5.0",
-    "expo-secure-store": "~12.3.1",
-    "expo-status-bar": "~1.6.0",
-    "expo-updates": "~0.18.19",
+    "expo": "^50.0.0",
+    "expo-file-system": "~16.0.8",
+    "expo-image-picker": "~14.7.1",
+    "expo-location": "~16.5.5",
+    "expo-modules-autolinking": "~1.10.0",
+    "expo-secure-store": "~12.8.1",
+    "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.12",
     "gotham-fonts": "^1.0.3",
-    "metro": "^0.80.2",
+    "metro": "~0.80.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.10",
+    "react-native": "0.73.6",
     "react-native-calendars": "^1.1303.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-date-picker": "^4.3.7",
     "react-native-dotenv": "^3.4.9",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-maps": "1.7.1",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-maps": "1.10.0",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.11.4",
     "react-native-root-toast": "^3.5.1",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-snap-carousel": "4.0.0-beta.6",
-    "react-native-svg": "13.9.0",
+    "react-native-svg": "14.1.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "13.2.2",
+    "react-native-webview": "13.6.4",
     "toastify-js": "^1.12.0",
     "victory-native": "^36.8.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.6"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
